# polyus

./: README.md  docker-compose.yaml
backend/: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  mypy.ini  pyproject.toml
backend/app/: __main__.py  config.py
backend/app/detector/: __init__.py
backend/app/detector/models/: common.py  experimental.py  yolo.py
backend/app/detector/utils/: autoanchor.py  datasets.py  general.py  loss.py  metrics.py  plots.py  square.py  torch_utils.py
backend/app/iterators/: main_frame.py  one_frame.py
backend/app/models/: average_graph.py  class_size.py  frame_with_oversize.py
backend/app/repositories/: average_graph.py  class_sizes.py  count.py  distance.py  frame.py  frame_with_oversize.py
backend/app/requests/: settings.py
backend/app/responses/: class_sizes.py  frame_with_oversize.py  graph.py  ok.py  oversize_distance.py  settings.py
backend/app/routers/: main.py  settings.py
backend/scripts/: start.sh
frontend/: Dockerfile
