[tool.poetry]
name = "polyus-hack-api"
version = "0.1.0"
description = ""
authors = ["Nikita Gabbasov <copyleft@sosus.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
uvicorn = "^0.18.3"

torch = "*"
poethepoet = "*"
numpy = "^1.23.4"
opencv-python = "^4.6.0.66"
pandas = "^1.5.0"
tqdm = "^4.64.1"
matplotlib = "^3.6.1"
seaborn = "^0.12.0"
scipy = "^1.9.2"
onnx = "^1.12.0"
PyYAML = "^6.0"

[tool.poetry.group.dev.dependencies]
mypy = "^0.982"
black = "^22.10.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"
wemake-python-styleguide = "^0.17.0"

[tool.poe.tasks]
install-ltt = "poetry run pip install light-the-torch"
run-ltt = "poetry run python -m light_the_torch install --upgrade torch torchvision"
autoinstall-torch-cuda = ["install-ltt", "run-ltt"]

[tool.black]
line-length = 99
target-version = ['py310']
exclude = '''
(
    \.eggs
  | \.git
  | \.tox
  | build
  | dist
  | venv
  | docs
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 99

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
